crates/test-files/fixtures/compile_errors/trait_not_in_scope/src copy/foo.fe
trait DoThing {
  fn do(self);
}


impl DoThing for u256 {
  fn do(self) {
  }
}
